# ai_autovault

./: .env.example  .gitignore  Dockerfile  README.md  USERGUIDE.md  app.db  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  error_handlers.py
app/api/endpoints/: __init__.py  dbt.py  metadata.py  models.py  models_enhanced.py
app/core/: config.py  logging.py  security.py
app/knowledge_graph/: __init__.py
app/knowledge_graph/api/: __init__.py  endpoints.py  visualizer_endpoints.py  yaml_endpoints.py
app/knowledge_graph/models/: __init__.py  node_models.py  relationship_models.py  request_models.py  response_models.py
app/models/: config.py  data_vault.py  metadata.py  response.py
app/services/: data_ingestion.py  data_vault_store.py  dbt_manager.py  git_manager.py  metadata_store.py  model_generator.py  model_generator_enhanced.py
app/utils/: file_utils.py  template_utils.py  yaml_utils.py
backup/: model_generator.py
data/: file.csv  metadata_src.csv  sample_metadata.csv  test_metadata.csv
docs/: knowledge_graph.md
scripts/: check_templates.py  create_admin.py  debug_models_generate.py  test_auto_model_generation.py  test_model_api.py  test_yaml_format.py
templates/dbt/: dbt_project.yml.j2  profiles.yml.j2
templates/models/: hub.yml.j2  link.yml.j2  satellite.yml.j2
tests/: conftest.py  test_data_ingestion.py  test_dbt_manager.py  test_model_generator.py
tests/knowledge_graph/: __init__.py  test_graph_builder.py  test_graph_connector.py  test_graph_visualizer.py  test_lineage_service.py
(+8 files in other folders)
